// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a disabled checkout button where cart is empty 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [],
      "totalQuantity": 0,
    }
  }
  dispatch={[Function]}
>
  <div
    className="c-header__minibag"
  >
    <Link
      href="/cart"
    >
      <div
        className="c-minibag__cart"
        onClick={[Function]}
      >
        <a
          aria-label="View your cart"
        >
          <span
            className="c-minibag__cart-count"
          >
            0
          </span>
        </a>
        <div
          className="c-minibag__cart-label"
        >
          <Link
            href="/cart"
          >
            <a
              href="/cart"
              onClick={[Function]}
            >
              Basket
            </a>
          </Link>
        </div>
      </div>
    </Link>
    <div
      className="c-minibag__checkout"
    >
      <Link
        href=""
      >
        <Button
          aria-label="Go to checkout"
          className="o-button--disabled"
          label="Checkout"
          onClick={[Function]}
          status="primary"
        >
          <div
            className="o-button__container"
          >
            <button
              aria-label="Go to checkout"
              className="o-button--disabled o-button o-button--primary"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
            >
              Checkout
            </button>
          </div>
        </Button>
      </Link>
      <Link
        as="/account/myaccount"
        href="/account/login"
      >
        <a
          className="o-header__myaccount"
          href="/account/myaccount"
          onClick={[Function]}
        >
          My Account
        </a>
      </Link>
    </div>
  </div>
</MiniBag>
`;

exports[`renders an active checkout button where cart has items 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "image_url": "",
          "price": 10,
          "productID": 1,
          "productSku": "1231",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
      "totalQuantity": 2,
    }
  }
  dispatch={[Function]}
>
  <div
    className="c-header__minibag"
  >
    <Link
      href="/cart"
    >
      <div
        className="c-minibag__cart"
        onClick={[Function]}
      >
        <a
          aria-label="View your cart"
        >
          <span
            className="c-minibag__cart-count"
          >
            2
          </span>
        </a>
        <div
          className="c-minibag__cart-label"
        >
          <Link
            href="/cart"
          >
            <a
              href="/cart"
              onClick={[Function]}
            >
              Basket
            </a>
          </Link>
        </div>
      </div>
    </Link>
    <div
      className="c-minibag__checkout"
    >
      <Link
        href="/checkout"
      >
        <Button
          aria-label="Go to checkout"
          className=""
          label="Checkout"
          onClick={[Function]}
          status="primary"
        >
          <div
            className="o-button__container"
          >
            <button
              aria-label="Go to checkout"
              className="o-button o-button--primary"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
            >
              Checkout
            </button>
          </div>
        </Button>
      </Link>
      <Link
        as="/account/myaccount"
        href="/account/login"
      >
        <a
          className="o-header__myaccount"
          href="/account/myaccount"
          onClick={[Function]}
        >
          My Account
        </a>
      </Link>
    </div>
  </div>
</MiniBag>
`;

exports[`renders the minibag links 1`] = `
<div
  className="c-header__minibag"
>
  <Link
    href="/cart"
  >
    <div
      className="c-minibag__cart"
    >
      <a
        aria-label="View your cart"
      >
        <span
          className="c-minibag__cart-count"
        >
          0
        </span>
      </a>
      <div
        className="c-minibag__cart-label"
      >
        <Link
          href="/cart"
        >
          <a>
            Basket
          </a>
        </Link>
      </div>
    </div>
  </Link>
  <div
    className="c-minibag__checkout"
  >
    <Link
      href=""
    >
      <Button
        aria-label="Go to checkout"
        className="o-button--disabled"
        label="Checkout"
        status="primary"
      />
    </Link>
    <Link
      as="/account/myaccount"
      href="/account/login"
    >
      <a
        className="o-header__myaccount"
      >
        My Account
      </a>
    </Link>
  </div>
</div>
`;
